--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "sonner": "^1.7.2",
+    "swr": "^2.3.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
