--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.1.3",
+    "@ai-sdk/provider-utils": "^2.1.3",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -17,6 +19,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "ai": "^4.1.6",
     "autoprefixer": "10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -30,6 +33,7 @@
     "react-dom": "19.0.0",
     "sonner": "^1.7.2",
     "swr": "^2.3.0",
+    "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
