--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0",
+    "recharts": "^2.15.0",
     "sonner": "^1.7.2",
     "swr": "^2.3.0",
     "zod": "^3.24.1",
